feat: show explanation after correct answer

--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -42,10 +42,12 @@ This case is a little bit deifferent than the last one. This time, we have $h(x)
 
 Suppose we have a function $f(x)$ that we do not exactly know of, but we only have the following information;
 
-| x    | -2.1 | -2.01 | -2.001 | -1.998 | -1.98 | -1.9 |
+| x    | -2.1 | -2.01 | -2.001 | -1.998 | -1.98 | -1.8 |
 | ---- | ---- | ----- | ------ | ------ | ----- | ---- |
 | f(x) | 5.11 | 5.09  | 5.005  | 5.006  | 5.01  | 5.12 |
 
 What integer would be the most reasonable estimate for $\lim_{x\rightarrow -2} f(x)$?
 
 `[input]5`
+
+> #submitted# From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches 5. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches 5. The msot reasonable guess for $\lim_{x\rightarrow -2} f(x)$ would be $5$.
