--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -14,7 +14,7 @@ Let $f$ be a function defined on an open interval containing $a$, with the possi
 
 Let's use a simple function $f(x) = x^2$ below. `[graph]function:x*x`
 
-If we set $x = -2$, we will have $f(-2)=4$. If we set $x = -1$, we will have $f(-1)=1$. If we set $x = -0.5$, we will have $f(-0.5)=0.25$.
+If we set $x = -1$, we will have $f(-1)=1$. If we set $x = -0.1$, we will have $f(-0.1)=0.01$. If we set $x = -0.01$, we will have $f(-0.01)=0.0001$.
 
 As we can see, if we go from anywhere on the left side to $x = 0$, we can tell that as $x$ approaches $0$ from the left side, the value of $f(x)$ will eventually approach $0$. The same also happens if we look from the right side, that is, as $x$ approaches $0$ from the right side, the value $f(x)$ will also eventually approach $0$.
 
@@ -50,4 +50,4 @@ What integer would be the most reasonable estimate for $\lim_{x\rightarrow -2} f
 
 `[input]5`
 
-> #submitted# From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches 5. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches 5. The msot reasonable guess for $\lim_{x\rightarrow -2} f(x)$ would be $5$.
+> #submitted# **That's right!** From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches 5. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches 5. The most reasonable guess for $\lim_{x\rightarrow -2} f(x)$ is $5$.
