--- a/src/materials/calculus/limits/properties.mdx
+++ b/src/materials/calculus/limits/properties.mdx
@@ -1,51 +1,241 @@
-# Definitions
+# Properties of Limits
+  
+> #formula# $\lim\limits_{x\rightarrow a} c = c$
 
-## Precise Definition of Limit
+**The limit of a constant function is the constant itself.** At any point $x$, the function will be always equal to the constant, so finding the limit of this function as $x$ approaches any point would result the same, that is, the constant itself.
 
-Let $f$ be a function defined on an open interval containing $a$, with the possible exception of a itself (the function f does not need to be defined on a), then $\lim_{x\rightarrow a} f(x)=L$ if for every number $\epsilon > 0$, exists a number $\delta > 0$ such that: $0 < |x - a| < \delta$ implies that $|f(x) - L| < \epsilon$.
+---
+  
+> #formula# $\lim\limits_{x\rightarrow a} x = a$
 
-## General Definition of Limit
+Similar to the previous one, this is self-explanatory. 
 
-Let $f$ be a function defined on an open interval containing $a$, with the possible exception of $a$ itself (the function $f$ does not need to be defined on $a$), then $\lim_{x\rightarrow a} f(x)=L$ if $f(x)$ can be made as close to $L$ by making $x$ to be sufficiently close to $a$, from both right and left side: $\lim_{x\rightarrow a^+} f(x)=\lim_{x\rightarrow a^-} f(x)=L$.
+---
+  
+> #formula# $\lim\limits_{x\rightarrow a} c \times f(x) = c \lim\limits_{x\rightarrow a} f(x)$
+
+The limit of a function **multiplied by a constant** is equal to the constant multiplied by the limit of a function.
+
+---
+  
+> #formula# $\lim\limits_{x\rightarrow a} \left [f(x) \pm g(x) \right] =\lim\limits_{x\rightarrow a} f(x) \pm \lim\limits_{x\rightarrow a} g(x) $
+
+The **sum or difference** of the limit of two functions is equal when **adding or subtracting** them individually.
+
+---
+  
+> #formula# $\lim\limits_{x\rightarrow a} f(x)g(x) =\lim\limits_{x\rightarrow a} f(x) \times \lim\limits_{x\rightarrow a} g(x) $  
+> 
+> $\lim\limits_{x\rightarrow a} \frac{f(x)}{g(x)} = \large \frac{\lim\limits_{x\rightarrow a} f(x)}{\lim\limits_{x\rightarrow a} g(x)}, \normalsize \text{where } g(x) \neq 0 $
+
+The **product or quotient** of the limit of two functions is equal when **multiplying or dividing** them individually.
+
+---
+  
+> #formula# $\lim\limits_{x\rightarrow a} \left [ f(x) \right ]^n = \left [ \lim\limits_{x\rightarrow a} f(x) \right ]^n$
+
+Given that $n$ is any real number, including fractions, the limit of **(the function $f$ to the power of $n$)** is equal to **(the limit of the function $f$)** to the power of $n$. Due to the previous law or property, this one should be self-explanatory.
+
+---
+  
+> #formula# $\lim\limits_{x\rightarrow 0} \frac{1}{|x|} = \infty$
+> 
+> $\lim\limits_{x\rightarrow \infty} \frac{1}{x} = 0$
+
+These are some other basic limits that may help you in calculating limits.
 
 ===
 
-# Determining Limits
+# Properties of Limits: Easy Examples
 
-Let's use a simple function $f(x) = x^2$ below. `[graph]function:x*x`
+> #formula# **Example**  
+> Evaluate $\lim\limits_{x\rightarrow 4} \left [ 4x^2 - 4x + 1 \right ] = ...$
 
-If we set $x = -2$, we will have $f(-2)=4$. If we set $x = -1$, we will have $f(-1)=1$. If we set $x = -0.5$, we will have $f(-0.5)=0.25$.
+To simplify things, we can first think of this function as a combination of three different functions, then find the limit of each function, then apply the addition or subtraction like the following.
 
-As we can see, if we go from anywhere on the left side to $x = 0$, we can tell that as $x$ approaches $0$ from the left side, the value of $f(x)$ will eventually approach $0$. The same also happens if we look from the right side, that is, as $x$ approaches $0$ from the right side, the value $f(x)$ will also eventually approach $0$.
+$$
+\begin{align*}
+\lim_{x\rightarrow 4} \left [ 4x^2 - 4x + 1 \right ] &= \lim_{x\rightarrow 4} 4x^2 - \lim_{x\rightarrow 4} 4x + \lim_{x\rightarrow 4} 1\\
+ &= 64 - 16 + 1\\
+ &= 49\\
+\end{align*}
+$$
 
-In this case, we can say that the limit of $f(x)$ as $x$ approaches $0$, is $0$. In other words, $\lim_{x\rightarrow 0} (x^2) = 0$. Note that we do not necessarily always find the limit by substituting the $x$ directly to the function like in this case.
+You may have realized that it is faster to think of this as substituting $x$ into $f(x)$. However, be warned that this is not **always the case**.
+
+> #formula# **Example**  
+> Evaluate $\lim\limits_{x\rightarrow -2} \frac{x^2 - 1} {9x^2 + 6x + 3}  = ...$
+
+Again, by thinking of this as doing a simple algebra, substituting $x$ into the function to find the value:
+
+$$
+\begin{align*}
+\lim_{x\rightarrow -2} \frac{x^2 - 1}{9x^2 + 6x + 3} &= \lim_{x\rightarrow -2} \frac{(-2)^2 - 1}{(9 \times (-2)^2) + (6 \times (-2)) + 3}\\
+ &= \frac{3}{27}\\
+ &= \frac{1}{9}\\
+\end{align*}
+$$
+
 
 ===
 
-# Determining Limits
+# Properties of Limits: Tricky Example #1
 
-`[graph]function:1/x`
+> #formula# **Example**  
+> Evaluate $\lim\limits_{x\rightarrow 1} \frac{x^2-5x+4}{x^2-1}  = ...$
 
-Sometimes, we may get something like the above $g(x) = \frac{1}{x}$. What would be the value of $\lim_{x\rightarrow 0} \frac{1}{x}$? That's right, it doesn't exist. If we recall the definiton of limit, we can clearly see that if we try approaching $x = 0$ from the right side, $g(x)$ will eventually approach $-\infty$, whereas approaching $x = 0$ from the left side, $g(x)$ will eventually approach $\infty$. Therefore, it is true that $\lim_{x\rightarrow 0^-} \frac{1}{x} = -\infty$ and $\lim_{x\rightarrow 0^+} \frac{1}{x} = \infty$.
+When you plug in $x=1$ into the function, you get...
+$$
+\begin{align*}
+\lim_{x\rightarrow 1} \frac{x^2-5x+4}{x^2-1} &= \lim_{x\rightarrow 1} \frac{1-5+4}{1-1}\\
+ &= \frac{0}{0}\\
+\end{align*}
+$$
+...this! Well, this is not how we are supposed to solve this. Instead, this just means that there is a common factor between the numerator and denominator that we can cancel from both sides. In this case, it is $(x - 1)$. 
+
+$$
+\begin{align*}
+\lim_{x\rightarrow 1} \frac{x^2-5x+4}{x^2-1} &= \lim_{x\rightarrow 1} \frac{(x-1)(x-4)}{(x-1)(x+1)}\\
+ &= \lim_{x\rightarrow 1} \frac{(x-4)}{(x+1)}\\
+  &= -\frac{3}{2}\\
+\end{align*}
+$$
+
+Now, we have learnt that **factorization** is one of the method that we can use when we encounter an indeterminate form $\frac{0}{0}$.
 
 ===
 
-# Determining Limits
+# Properties of Limits: Tricky Example #2
 
-`[graph]function:1/[x]`
+> #formula# **Example**  
+> Evaluate $\lim\limits_{x\rightarrow \infty} \sqrt{x^2+6x-9}-\sqrt{x^2-8x+16}  = ...$
 
-This case is a little bit deifferent than the last one. This time, we have $h(x) = \frac{1}{|x|}$ . As you may have guessed, this one function does have a limit as $x$ approaches $0$ because the limit as $x$ approaches $0$ from the right and from the left is the same. Therefore, we can say that $\lim_{x\rightarrow 0} \frac{1}{|x|} = \infty$
+Putting $x=\infty$ will yield an indeterminate form $\infty - \infty$. However, what if there is a way for us to manipulate the equation to avoid getting indeterminate forms? Let's try **rationalizing** it.
+
+$$
+\begin{align*}
+&\lim_{x\rightarrow \infty} \sqrt{x^2+6x-9}-\sqrt{x^2-8x+16}\\
+&=\lim_{x\rightarrow \infty} \sqrt{x^2+6x-9}-\sqrt{x^2-8x+16}\times \frac{\sqrt{x^2+6x-9}+\sqrt{x^2-8x+16}}{\sqrt{x^2+6x-9}+\sqrt{x^2-8x+16}}\\
+&=\lim_{x\rightarrow \infty} \frac{(x^2+6x-9)-(x^2-8x+16)}{\sqrt{x^2+6x-9}+\sqrt{x^2-8x+16}}\\
+&=\lim_{x\rightarrow \infty} \frac{14x-25}{\sqrt{x^2+6x-9}+\sqrt{x^2-8x+16}}\\
+&=\lim_{x\rightarrow \infty} \frac{14-\frac{25}{x}}{\sqrt{1+\frac{6}{x}-\frac{9}{x^2}}+\sqrt{1-\frac{8}{x}+\frac{16}{x^2}}}\\
+&=\frac{14-0}{\sqrt{1+0-0}+\sqrt{1-0+0}}\\
+&=7
+\end{align*}
+$$
+
+You may have found one step rather confusing, that is, when we **divide both numerator and denominator with $x$**. The reason we do this is that we're dealing with $\infty$. How would we exactly calculate $\frac{\infty - 25}{\infty + \infty}$, if we were to immediately substitute the $x$ value? That is why, we need a trick like the above, so that we do not reach an indeterminate form. 
+
+Dividing both sides with $x$ for this specific case will help us evaluate the limit, because we know that $\lim\limits_{x\rightarrow a} c \times f(x) = c \lim\limits_{x\rightarrow a} f(x)$ and $\lim\limits_{x\rightarrow \infty} \frac{1}{x} = 0$. Combining these both properties, we know that we will end up with $\frac{14}{2}$.
+
+We can see that once we rationalize it, we can finally avoid getting indeterminate forms, Now, we have learnt that **rationalization** is one of the method that we can use to combat against indeterminate form $\infty - \infty$.
 
 ===
 
-# Practice: Determining Limits
+# Properties of Limits: Tricky Example #3
 
-Suppose we have a function $f(x)$ that we do not exactly know of, but we only have the following information;
+> #formula# **Example**  
+> Evaluate $\lim\limits_{x\rightarrow 1} \frac{2x-\sqrt{x + 3}}{x - 1}  = ...$
 
-| x    | -2.1 | -2.01 | -2.001 | -1.998 | -1.98 | -1.9 |
-| ---- | ---- | ----- | ------ | ------ | ----- | ---- |
-| f(x) | 5.11 | 5.09  | 5.005  | 5.006  | 5.01  | 5.12 |
+Once again, putting $x=1$ will yield $\frac{0}{0}$. However, trying to factor this directly may be not a simple task. However, let us try **rationalizing** the numerator.
 
-What integer would be the most reasonable estimate for $\lim_{x\rightarrow -2} f(x)$?
+$$
+\begin{align*}
+\lim_{x\rightarrow 1} \frac{2x-\sqrt{x + 3}}{x - 1}
+&= \lim_{x\rightarrow 1} \frac{2x-\sqrt{x + 3}}{x - 1} \times \frac{2x+\sqrt{x + 3}}{2x+\sqrt{x + 3}}\\
+&= \lim_{x\rightarrow 1} \frac{4x^2-x-3}{(x-1)(2x+\sqrt{x + 3})}\\
+&= \lim_{x\rightarrow 1} \frac{(x-1)(4x+3)}{(x-1)(2x+\sqrt{x + 3})}\\
+&= \frac{7}{4}\\
+\end{align*} 
+$$
 
-`[input]5`
+We can see that once we rationalize the numerator, we are fortunate enough to see a common factor, that we can cancel out. This is an unqiue example that we solved using more than one tricks.
+
+===
+
+# Piecewise Function: An Example
+
+> #formula# **Example**  
+> Given $f(x) = \begin{cases} x + 4 & \text{ if } x < -4 \\ x^2 + 5x + 4 & \text{ if } x \geq -4  \end{cases}$  
+> Evaluate $\lim\limits_{x\rightarrow -4} f(x)$
+
+Remember the definition of limit? The limit from the left and right side at a point must be equal, for a function to have a limit at that point. Let's calculate the left side. Since we're approaching from the left side, it means that $x < -4$, so we are using $f(x)$ when it is $x < -4$:
+
+$$
+\begin{align*}
+\lim_{x\rightarrow -4^-} f(x)
+&= \lim_{x\rightarrow -4^-} x + 4\\
+&= 0\\
+\end{align*} 
+$$  
+
+Now, to the right side:
+
+$$
+\begin{align*}
+\lim\limits_{x\rightarrow -4^+} f(x)
+&= \lim\limits_{x\rightarrow -4^+} x^2+5x+4\\
+&= \lim\limits_{x\rightarrow -4^+} (-4)^2+(5\times (-4))-4\\
+&= 0\\
+\end{align*} 
+$$
+
+Since both sides are equal, we can conclude that:
+$$
+\begin{align*}
+\lim\limits_{x\rightarrow -4} f(x)
+&= \lim\limits_{x\rightarrow -4^-} f(x) = \lim\limits_{x\rightarrow -4^+} f(x)\\
+&= 0\\
+\end{align*} 
+$$
+
+We can also see that if one of the limits had different values, then $f(x)$ would not have a limit at that point ($x = -4$).
+
+===
+
+# ✏️ Practice: Calculating Limits
+
+Evaluate $\lim\limits_{x\rightarrow 4} \frac{8 - \sqrt{x^3}}{\sqrt{x} - 2}  = ...$.  
+If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
+
+`[input]-12`
+
+> #explanation# **Correct!** This is just another example of limit that we can solve with factorization. Tbe square root might get in our way, but let us create a new variable $v$, such that $v = \sqrt{x}$. Since we're converting from one to another variable, the $x$ we're approaching in the limit also changes accordingly. Even if you do not subsitute, **the result will stay the same**.
+> $$
+> \begin{align*}
+> \lim_{x\rightarrow 4} \frac{8 - \sqrt{x^3}}{\sqrt{x} - 2} &= \lim_{v\rightarrow 2} \frac{8 - v^3}{v - 2} \\
+> &= \lim_{v\rightarrow 2} \frac{- (v^3 - 8)}{v - 2} \\
+> &= \lim_{v\rightarrow 2} \frac{- (v - 2)(v^2 + 2v + 4)}{v - 2} \\
+> &= \lim_{v\rightarrow 2} -(v^2 + 2v + 4) \\
+> &= \lim_{v\rightarrow 2} -(2^2 + 2\times2 + 4) \\
+> &= -12 \\
+> \end{align*}
+> $$
+
+===
+
+# ✏️ Practice: Calculating Limits
+
+Evaluate $\lim\limits_{x\rightarrow \infty }(\sqrt{9x^2+6x-3}-3x-4) $.  
+If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
+
+`[input]-3`
+
+> #explanation# **Correct!** This is just another example of limit that we can solve with rationalization. However, you may find this one a little bit trickier than the example because you have to manipulate $-3x-4$ part of the equation into its root form, but that is it, the steps remain the same.  
+> $$ 
+> \begin{align*}
+> \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-3x-4]  &= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-(3x+4)] \\
+> &= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{(3x+4)^2}] \\
+> &= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{9x^2+24x+16}] \\
+> &= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{9x^2+24x+16}] \times \frac{[\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}]}{[\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}]}  \\
+> &= \lim_{x\rightarrow \infty} \frac{(9x^2+6x-3) - (9x^2+24x+16)}{\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}} \\
+> &= \lim_{x\rightarrow \infty} \frac{(-18x - 19)}{\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}} \\
+> &= \lim_{x\rightarrow \infty} \frac{(-18 - \frac{19}{x})}{\sqrt{9+\frac{6}{x}-\frac{3}{x^2}}+\sqrt{9+\frac{24}{x}+\frac{16}{x^2}}} \\
+> &= \frac{-18}{6} \\
+> &= -3 \\
+> \end{align*}
+> $$   
+> 
+> You may find these steps a little bit repetetive, so here is a little trick:
+> > #formula# Given $f(x) = \sqrt{ax^2 + bx + c} - \sqrt{px^2 + qx + r}$,  
+> > then, $\lim_{x\rightarrow \infty} f(x) = \begin{cases} \infty & \text{ if } a > p \\ \frac{b-q}{2\sqrt{a}} & \text{ if } a = p \\ -\infty & \text{ if } a < p \\ \end{cases}$  
